mesh_istio/circuit_breaker/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
        version: "200"
    spec:
      containers:
        - name: servicex
          image: gabrielggs/circuit-breaker-example-go:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicex-error
spec:
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
        version: "504"
    spec:
      containers:
        - name: servicex
          image: gabrielggs/circuit-breaker-example-go:error-504
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: servicex-service
spec:
  type: ClusterIP
  selector:
    app: servicex
  ports:
    - port: 80
      targetPort: 8000
