mesh_istio/circuit_breaker/k8s/gateway-domains.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.fullcycle"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs-a
spec:
  hosts:
  - "a.fullcycle"
  gateways:
    - "ingress-gateway-k3s"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs-b
spec:
  hosts:
  - "b.fullcycle"
  gateways:
    - "ingress-gateway-k3s"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-breaker-servicex
spec:
  host: servicex-service.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      # consecutive5xxErrors: 20
      consecutiveGatewayErrors: 10
      interval: 20s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
